force-app/main/default/objects/Empleado__c/Empleado__c.object-meta.xml
<CustomObject>
    <label>Empleado</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>ID del Profesional</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Empleados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>