force-app/main/default/objects/Empleado__c/fields/Apellido__c.field-meta.xml
<CustomField>
    <fullName>Apellido__c</fullName>
    <label>Apellido</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>