force-app/main/default/objects/Empleado__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Departamento</label>
    <referenceTo>Departamento__c</referenceTo>
    <relationshipName>Profesionales</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>