force-app/main/default/objects/Empleado__c/fields/E_mail__c.field-meta.xml
<CustomField>
    <fullName>E_mail__c</fullName>
    <label>E-mail</label>
    <required>true</required>
    <type>Email</type>
</CustomField>