force-app/main/default/objects/Empleado__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Postulación</fullName>
            </value>
            <value>
                <fullName>Aprobación</fullName>
            </value>
            <value>
                <fullName>Contratado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>