force-app/main/default/objects/Empleado__c/fields/Fecha_de_Contratacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Contratacion__c</fullName>
    <label>Fecha de Contratación</label>
    <type>Date</type>
</CustomField>