force-app/main/default/objects/Empleado__c/fields/Fecha_de_Terminacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Terminacion__c</fullName>
    <description>Fecha de terminación del contrato</description>
    <label>Fecha de Terminación</label>
    <type>Date</type>
</CustomField>