force-app/main/default/objects/Empleado__c/fields/Horario_laboral__c.field-meta.xml
<CustomField>
    <fullName>Horario_laboral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Horario laboral en el que trabaja el profesional.</description>
    <label>Horario laboral</label>
    <referenceTo>OperatingHours</referenceTo>
    <relationshipName>Profesionales</relationshipName>
    <type>Lookup</type>
</CustomField>