force-app/main/default/objects/Empleado__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nombre__c</columns>
    <columns>Apellido__c</columns>
    <columns>Departamento__c</columns>
    <columns>Horario_laboral__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>